# wood

./: .gitignore  EXAMPLES.md  README.md  dev.sh  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  settings.json
.claude/agents/: ui-ux-reviewer.md
apidocs/abin_v2.0/: openapi.json
apidocs/raster_v1.0/: openapi.json
apidocs/skogliga grunddata_v1.0/: openapi.json
backend/: main.py
backend/api/: abin.py  constants.py  grunddata.py  raster.py
backend/core/: config.py  dependencies.py  exceptions.py  logging.py  middleware.py
backend/models/: requests.py  responses.py
backend/services/: auth.py  skogsstyrelsen_client.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  config.ts  examples.ts
frontend/src/lib/components/: AbinExample.svelte  GrunddataExample.svelte  HistogramChart.svelte  MapInterface.svelte  MetricsPanel.svelte  ProjectionPanel.svelte  ThemeToggle.svelte
frontend/src/lib/constants/: endpoints.ts
frontend/src/lib/services/: abin.ts  grunddata.ts  map.ts
frontend/src/lib/utils/: coordinates.ts
tests/: conftest.py  test_main.py
tests/api/: test_abin.py  test_grunddata.py  test_raster.py
tests/core/: test_config.py  test_exceptions.py
tests/services/: test_auth.py  test_client.py
